test/Fail/Issue5033.agda
{-# OPTIONS --guarded #-}

postulate
  test : (@tick _ : _) → Set
