test/Fail/Issue5033.err
Issue5033.agda:4.10-29: error: [NoBindingForPrimitive]
Missing binding for primLockUniv primitive.
when checking that the expression ∀ (@tick _) → Set is a type
